--- a/index.css
+++ b/index.css
@@ -1,19 +1,43 @@
 body{
     margin: 0;
     padding: 0;
-    background-image: url("images/table.jpg");
+    background-image: url("images/table.png");
     background-size: cover;
     margin-left: 3rem;
-    font-family: 'Vollkorn', serif;
+    font-family: 'Poppins', sans-serif;
     color: white;
-
+    text-align: center;
+    font-weight: bold;
+    letter-spacing: .1rem;
 }
 
 h1 {
     color: goldenrod;
+    letter-spacing: .2rem;
 }
 
 #message-el {
     font-style: italic;
     font-size: 1.1rem;
 }
+
+button {
+    color: #016f32;
+    width: 150px;
+    background:goldenrod;
+    border-radius:3px;
+    border: none;
+    font-weight: bold;
+    padding-top: .3rem;
+    padding-bottom: .3rem;
+    margin-bottom: .4rem;
+    display: block; 
+    margin-left: auto;
+    margin-right: auto;
+}
+/* 
+3. Style the button according to the provided design
+text color - #016f32
+width      - 150px
+background - goldenrod
+ */
